# bases_athle_scrapper

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  REFACTORING.md  common_config.py  crontab  db.py  docker-compose.yml  list_athletes.py  list_clubs.py  package-lock.json  populate_database.sh  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties  update_database.sh
.github/workflows/: ci.yml  deploy-prod.yml  docker.yml
core/: __init__.py  config.py  db.py  schema.py  schema.sql
docs/: DOCKER_CICD.md  DOCKER_CRON.md  REFACTORING.md  SETUP_SONARCLOUD.md
scraper/: list_athletes.py  list_clubs.py
scripts/: scrape_athletes.py  scrape_clubs.py
src/bases_athle_scraper/: __init__.py  athletes.py  clubs.py
src/bases_athle_scraper/cli/: athletes.py  clubs.py
src/bases_athle_scrapper/: __init__.py  athletes.py  clubs.py  database.py  logging_config.py
src/bases_athle_scrapper/cli/: __init__.py  athletes.py  clubs.py
systemd/: README.md  bases-athle-update.service  bases-athle-update.timer
tests/: conftest.py  test_duplicate_handling.py  test_parsing.py  test_storage.py  test_utils.py
tests/fixtures/: athlete.html  club_athletes.html  clubs.html
tools/: analyze_database.py
